--- a/semiProject/src/main/resources/templates/common/header.html
+++ b/semiProject/src/main/resources/templates/common/header.html
@@ -25,7 +25,7 @@
       <div id="header">
         <!-- home으로 -> "/" -->
         <a href="../메인페이지/main.html">
-          <img src="../logo.jpg" alt="logo" id="logo" />
+          <img src="images/logo.jpg" alt="logo" id="logo" />
         </a>
         <nav id="nav">
           <ul id="navigation">
