--- a/semiProject/src/main/resources/templates/common/main.html
+++ b/semiProject/src/main/resources/templates/common/main.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="/css/main.css" />
   </head>
   <body>
-    <th:block replace="~{common/header}"></th:block>
+    <th:block th:replace="~{common/header}"></th:block>
     <div id="container">
-      <img src="/images/mainLogo.jpg" alt="메인로고" id="mainLogoImg" />
+      <img src="images/mainLogo.jpg" alt="메인로고" id="mainLogoImg" />
       <div id="mainContent">
         <div>
           <p id="boardTitle">자유 게시판</p>
@@ -69,6 +69,6 @@
         </div>
       </div>
     </div>
-    <th:block replace="~{common/footer}"></th:block>
+    <th:block th:replace="~{common/footer}"></th:block>
   </body>
 </html>
