--- a/semiProject/src/main/resources/templates/common/header.html
+++ b/semiProject/src/main/resources/templates/common/header.html
@@ -11,21 +11,21 @@
       <section id="header-content-1">
         <ul id="user">
           <!-- 로그인 안했을 때 -->
-          <!-- <li><a href="#" id="loginText">로그인</a></li> -->
-          <!-- <li><a href="#" id="signInText">회원가입</a></li> -->
-          <!-- 로그인 했을 때 (일반 유저) -->
-          <!-- <li><b>동근동근</b>님 환영합니다.</li> -->
+          <li><a href="#" id="loginText">로그인</a></li> 
+          <li><a href="#" id="signInText">회원가입</a></li>
+				<!-- 로그인 했을 때 (일반 유저) -->
+				<!-- <li><b>동근동근</b>님 환영합니다.</li> -->
           <!-- <li><a href="#" id="loginText">로그아웃</a></li> -->
           <!-- <li><a href="#" id="signInText">마이페이지</a></li> -->
           <!-- 로그인 했을 때 (관리자) -->
-          <li><b>관리자님</b> 환영합니다.</li>
-          <li><a href="#" id="loginText">로그아웃</a></li>
+          <!-- <li><b>관리자님</b> 환영합니다.</li>
+          <li><a href="#" id="loginText">로그아웃</a></li> -->
         </ul>
       </section>
       <div id="header">
         <!-- home으로 -> "/" -->
-        <a href="../메인페이지/main.html">
-          <img src="images/logo.jpg" alt="logo" id="logo" />
+        <a href="/">
+          <img src="/images/logo.jpg" alt="logo" id="logo" />
         </a>
         <nav id="nav">
           <ul id="navigation">
