헤더 충돌 해결 및 회원가입 기능 구현

--- a/semiProject/src/main/resources/templates/common/header.html
+++ b/semiProject/src/main/resources/templates/common/header.html
@@ -11,10 +11,10 @@
       <section id="header-content-1">
         <ul id="user">
           <!-- 로그인 안했을 때 -->
-          <li><a href="#" id="loginText">로그인</a></li>
-          <li><a href="#" id="signInText">회원가입</a></li>
-          <!-- 로그인 했을 때 (일반 유저) -->
-          <!-- <li><b>동근동근</b>님 환영합니다.</li> -->
+          <li><a href="#" id="loginText">로그인</a></li> 
+          <li><a href="@{/member/signup}" id="signInText">회원가입</a></li>
+				<!-- 로그인 했을 때 (일반 유저) -->
+				<!-- <li><b>동근동근</b>님 환영합니다.</li> -->
           <!-- <li><a href="#" id="loginText">로그아웃</a></li> -->
           <!-- <li><a href="#" id="signInText">마이페이지</a></li> -->
           <!-- 로그인 했을 때 (관리자) -->
