--- a/semiProject/src/main/resources/templates/common/header.html
+++ b/semiProject/src/main/resources/templates/common/header.html
@@ -12,7 +12,7 @@
         <ul id="user">
           <!-- 로그인 안했을 때 -->
           <li><a href="#" id="loginText">로그인</a></li> 
-          <li><a href="@{/member/signup}" id="signInText">회원가입</a></li>
+          <li><a th:href="@{/member/signup}" id="signInText">회원가입</a></li>
 				<!-- 로그인 했을 때 (일반 유저) -->
 				<!-- <li><b>동근동근</b>님 환영합니다.</li> -->
           <!-- <li><a href="#" id="loginText">로그아웃</a></li> -->
