--- a/semiProject/src/main/resources/templates/email/signup.html
+++ b/semiProject/src/main/resources/templates/email/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 </head>
 <body>
-    <h3>[BoardProject] 회원가입 인증번호입니다.</h3>
+    <h3>회원가입 인증번호입니다.</h3>
     <h1 style="color:blue" th:text="${authKey}"></h1>
 </body>
 </html>
