--- a/semiProject/src/main/resources/static/css/board/freeBoardList.css
+++ b/semiProject/src/main/resources/static/css/board/freeBoardList.css
@@ -29,21 +29,45 @@
   display: flex;
   justify-content: center;
 }
+
 #page > ul {
   display: flex;
-  gap: 11px;
   list-style: none;
+  padding: 0;
+  margin: 0;
+  gap: 12px;
 }
-#page > ul > li > a {
+
+#page > ul > li {
+  width: 32px;
+  height: 32px;
+}
+
+.page-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 100%;
+  height: 100%;
+
   font-size: 15px;
   font-weight: bold;
+  text-decoration: none;
+  color: black;
+
+  border-radius: 50%;
 }
-#curr-page {
+
+.page-btn:hover {
+  background-color: #ffd879;
+  color: #ff5900;
+}
+
+.page-btn.curr-page {
   background-color: #ff5900;
-  width: 21.87px;
-  text-align: center;
-  border-radius: 20px;
   color: white;
+  pointer-events: none;
 }
 
 #search {
