--- a/semiProject/src/main/resources/templates/board/freeBoardList.html
+++ b/semiProject/src/main/resources/templates/board/freeBoardList.html
@@ -42,7 +42,6 @@
                 <td th:text="*{boardNo}">게시판번호</td>
                 <td id="board-title">
                   <a
-                    th:unless="${param.key}"
                     th:href="@{/board/{boardCode}/{boardNo} (boardCode = ${boardCode}, boardNo=*{boardNo}, cp=${pagination.currentPage})}"
                     th:text="*{boardTitle}"
                     >게시판 제목</a
@@ -57,24 +56,106 @@
           </tbody>
         </table>
       </div>
-      <div id="page">
-        <ul th:object="${pagination}">
+      <!-- 페이지 네이션 -> 검색이 아닌 경우 -->
+      <div id="page" th:unless="${param.key}">
+        <ul>
           <li>
-            <a href="/board/{boardCode}(boardCode=${boardCode}, cp=1)"
+            <a
+              th:href="@{/board/{boardCode}(boardCode=${boardCode}, cp=1)}"
+              class="page-btn"
               >&lt;&lt;</a
             >
           </li>
-          <li><a href="#">&lt;</a></li>
-          <!-- <li id="curr-page">1</li> -->
-          <th:block th:each="i : *{#numbers.sequence(startPage, endPage)}">
-            <li th:if="${i} == *{currentPage}" class="curr-page"></li>
-            <li th:unless="${i} == *{currentPage}"></li>
+
+          <li>
+            <a
+              th:href="@{/board/{boardCode}(boardCode=${boardCode}, cp=${pagination.prevPage})}"
+              class="page-btn"
+              >&lt;</a
+            >
+          </li>
+
+          <th:block
+            th:each="i : ${#numbers.sequence(pagination.startPage, pagination.endPage)}"
+          >
+            <li>
+              <a
+                th:href="@{/board/{boardCode}(boardCode=${boardCode}, cp=${i})}"
+                th:text="${i}"
+                class="page-btn"
+                th:classappend="${i == pagination.currentPage} ? ' curr-page' : ''"
+              ></a>
+            </li>
           </th:block>
-          <li><a href="#">&gt;</a></li>
-          <li><a href="#">&gt;&gt;</a></li>
+
+          <li>
+            <a
+              th:href="@{/board/{boardCode}(boardCode=${boardCode}, cp=${pagination.nextPage})}"
+              class="page-btn"
+              >&gt;</a
+            >
+          </li>
+
+          <li>
+            <a
+              th:href="@{/board/{boardCode}(boardCode=${boardCode}, cp=${pagination.maxPage})}"
+              class="page-btn"
+              >&gt;&gt;</a
+            >
+          </li>
         </ul>
       </div>
-      <div id="search">
+      <!-- 페이지 네이션 -> 검색인 경우 -->
+      <div id="page" th:if="${param.key}" th:object="${pagination}">
+        <ul>
+          <li>
+            <a
+              th:href="@{/board/{boardCode}(boardCode=${boardCode}, cp=1, key=${param.key}, query=${param.query})}"
+              class="page-btn"
+              >&lt;&lt;</a
+            >
+          </li>
+
+          <li>
+            <a
+              th:href="@{/board/{boardCode}(boardCode=${boardCode}, cp=*{prevPage}, key=${param.key}, query=${param.query})}"
+              class="page-btn"
+              >&lt;</a
+            >
+          </li>
+
+          <th:block
+            th:each="i : ${#numbers.sequence(pagination.startPage, pagination.endPage)}"
+          >
+            <li>
+              <a
+                th:href="@{/board/{boardCode}(boardCode=${boardCode}, cp=${i}, key=${param.key}, query=${param.query})}"
+                th:text="${i}"
+                class="page-btn"
+                th:classappend="${i == pagination.currentPage} ? ' curr-page' : ''"
+              ></a>
+            </li>
+          </th:block>
+
+          <li>
+            <a
+              th:href="@{/board/{boardCode}(boardCode=${boardCode}, cp=*{nextPage}, key=${param.key}, query=${param.query})}"
+              class="page-btn"
+              >&gt;</a
+            >
+          </li>
+
+          <li>
+            <a
+              th:href="@{/board/{boardCode}(boardCode=${boardCode}, cp=*{maxPage}, key=${param.key}, query=${param.query})}"
+              class="page-btn"
+              >&gt;&gt;</a
+            >
+          </li>
+        </ul>
+      </div>
+
+      <form th:action="@{/board/1}" id="search">
         <select name="key" id="search-box">
           <option value="t">제목</option>
           <option value="c">내용</option>
@@ -88,12 +169,12 @@
           placeholder="검색어를 입력해주세요"
         />
         <button id="search-btn">검색</button>
-      </div>
+      </form>
     </div>
     <th:block th:replace="~{common/footer}"></th:block>
 
-    <!-- <script th:inline="javascript">
+    <script th:inline="javascript">
       const boardCode = /*[[${boardCode}]]*/ "게시판 코드 번호";
-    </script> -->
+    </script>
   </body>
 </html>
