--- a/semiProject/src/main/resources/templates/board/volunteerReviewList.html
+++ b/semiProject/src/main/resources/templates/board/volunteerReviewList.html
@@ -35,15 +35,13 @@
             </div>
             <div id="content-info">
               <a href="#" id="content-title" th:text="${board.boardTitle}"
-                >색칠공부책 키트봉사 - 강원랜드 재난관리팀</a
+                >제목</a
               >
               <div>
                 <p id="day-info-text" th:text="${board.boardWriteDate}">
-                  30초전
+                  작성일
                 </p>
-                <p id="view-info-text" th:text="${board.readCount}">
-                  조회수 2203
-                </p>
+                <p id="view-info-text" th:text="${board.readCount}">조회수</p>
               </div>
             </div>
           </div>
