--- a/semiProject/src/main/resources/templates/common/header.html
+++ b/semiProject/src/main/resources/templates/common/header.html
@@ -9,19 +9,24 @@
   <body>
     <header>
       <section id="header-content-1">
-        <ul id="user">
-          <!-- 로그인 안했을 때 -->
-          <li><a href="#" id="loginText">로그인</a></li>
-          <li><a th:href="@{/member/signup}" id="signInText">회원가입</a></li>
-          <!-- 로그인 했을 때 (일반 유저) -->
-          <!-- <li><b>동근동근</b>님 환영합니다.</li> -->
-          <!-- <li><a href="#" id="loginText">로그아웃</a></li> -->
-          <!-- <li><a href="#" id="signInText">마이페이지</a></li> -->
-          <!-- 로그인 했을 때 (관리자) -->
-          <!-- <li><b>관리자님</b> 환영합니다.</li>
-          <li><a href="#" id="loginText">로그아웃</a></li> -->
-        </ul>
-      </section>
+  <ul id="user">
+
+    <th:block th:if="${session.loginMember == null}">
+      <li><a th:href="@{/member/login}" id="loginText">로그인</a></li>
+      <li><a th:href="@{/member/signup}" id="signInText">회원가입</a></li>
+    </th:block>
+
+
+    <th:block th:unless="${session.loginMember == null}">
+      <li>
+        <b th:text="${session.loginMember.memberNickname}">사용자</b>님 환영합니다.
+      </li>
+      <li><a th:href="@{/member/logout}" id="loginText">로그아웃</a></li>
+      <li><a th:href="@{/myPage/info}" id="signInText">마이페이지</a></li>
+    </th:block>
+
+  </ul>
+</section>
       <div id="header">
         <!-- home으로 -> "/" -->
         <a href="/">
