--- a/semiProject/src/main/resources/templates/member/login.html
+++ b/semiProject/src/main/resources/templates/member/login.html
@@ -13,6 +13,7 @@
   <main>
     <section class="login-container">
       <h1 class="login-title">로그인</h1>
+      <hr class="divider">
 
       <input type="hidden" id="loginMessage" th:value="${message}">
 
