--- a/semiProject/bin/main/static/css/common/header.css
+++ b/semiProject/bin/main/static/css/common/header.css
@@ -1,6 +1,16 @@
 * {
   box-sizing: border-box;
 }
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 #header-content-1 {
   width: 100%;
   margin: 30px 10px;
