--- a/semiProject/bin/main/templates/board/volunteerReviewList.html
+++ b/semiProject/bin/main/templates/board/volunteerReviewList.html
@@ -1,81 +1,163 @@
 <!DOCTYPE html>
 
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Document</title>
-<link rel="stylesheet" href="/css/common/common.css" />
-<link rel="stylesheet" href="/css/board/volunteerReviewList.css" />
-</head>
-<body>
-	<!-- header 들어갈 자리 -->
-	<!-- th:replace="~{common/header}" -->
-	<th:block th:replace="~{common/header}"></th:block>
-	<div id="container">
-		<div id="title">
-			<p id="titleText">봉사후기</p>
-		</div>
-		<div id="write">
-			<!-- 로그인한 회원만 가능 -->
-			<button id="write-btn">글작성</button>
-		</div>
-		<div id="content">
-			<!-- <th:block th:each="info : ${infomation}"></th:block> -->
-			<div id="content-1">
-				<div id="content-img">
-					<a href="#"> <img
-						src="/images/volunteer.jpeg" alt="" id="content-img-info" />
-					</a>
-				</div>
-				<div id="content-info">
-					<a href="#" id="content-title">색칠공부책
-						키트봉사 - 강원랜드 재난관리팀</a>
-					<div>
-						<p id="day-info-text">30초전</p>
-						<p id="view-info-text">조회수 2203</p>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div id="page">
-			<ul>
-				<!-- th:href="@{/board/{boardCode}(boardCode=${boardCode}, cp=1)}" -->
-				<li><a href="#">&lt;&lt;</a></li>
-				<!-- th:href="@{/board/{boardCode}(boardCode=${boardCode}, cp=*{prevPage})}" -->
-				<li><a href="#">&lt;</a></li>
-				<!--  <th:block th:each="i : *{#numbers.sequence(startPage, endPage)}"> -->
-				<li id="curr-page">1</li>
-				<li><a href="#">2</a></li>
-				<li><a href="#">3</a></li>
-				<li><a href="#">4</a></li>
-				<li><a href="#">5</a></li>
-				<li><a href="#">6</a></li>
-				<li><a href="#">7</a></li>
-				<li><a href="#">8</a></li>
-				<li><a href="#">9</a></li>
-				<li><a href="#">10</a></li>
-				<li><a href="#">&gt;&gt;</a></li>
-				<li><a href="#">&gt;&gt;</a></li>
-			</ul>
-		</div>
-		<form id="search">
-			<select name="key" id="search-box">
-				<option value="t">제목</option>
-				<option value="c">내용</option>
-				<option value="tc">제목 + 내용</option>
-				<option value="w">작성자</option>
-			</select> <input type="text" name="query" id="search-input"
-				placeholder="검색어를 입력해주세요" />
-			<button id="search-btn">검색</button>
-		</form>
-	</div>
-	<!-- footer 들어갈 자리 -->
-	<th:block th:replace="~{common/footer}"></th:block>
-	<!-- th:replace="~{common/footer}" -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="/css/common/common.css" />
+    <link rel="stylesheet" href="/css/board/volunteerReviewList.css" />
+  </head>
+  <body>
+    <!-- header 들어갈 자리 -->
+    <!-- th:replace="~{common/header}" -->
+    <th:block th:replace="~{common/header}"></th:block>
+    <div id="container">
+      <div id="title">
+        <p id="titleText">봉사후기</p>
+      </div>
+      <div id="write">
+        <!-- 로그인한 회원만 가능 -->
+        <button id="write-btn">글작성</button>
+      </div>
+      <div id="content">
+        <!-- <th:block th:each="info : ${infomation}"></th:block> -->
+        <th:block th:each="board : ${freeBoardList}" th:object="${board}">
+          <div id="content-1">
+            <div id="content-img">
+              <a
+                th:href="@{/board/{boardCode}/{boardNo} (boardCode = ${boardCode}, boardNo=*{boardNo}, cp=${pagination.currentPage})}"
+              >
+                <img
+                  src="/images/volunteer.jpeg"
+                  alt=""
+                  id="content-img-info"
+                />
+              </a>
+            </div>
+            <div id="content-info">
+              <a
+                th:href="@{/board/{boardCode}/{boardNo} (boardCode = ${boardCode}, boardNo=*{boardNo}, cp=${pagination.currentPage})}"
+                id="content-title"
+                th:text="${board.boardTitle}"
+                >제목</a
+              >
+              <div>
+                <p id="day-info-text" th:text="${board.boardWriteDate}">
+                  작성일
+                </p>
+                <p id="view-info-text" th:text="${board.readCount}">조회수</p>
+              </div>
+            </div>
+          </div>
+        </th:block>
+        <!-- asd -->
+      </div>
+      <!-- 페이지 네이션 -> 검색이 아닌 경우 -->
+      <div id="page" th:unless="${param.key}">
+        <ul>
+          <li>
+            <a
+              th:href="@{/board/{boardCode}(boardCode=${boardCode}, cp=1)}"
+              class="page-btn"
+              >&lt;&lt;</a
+            >
+          </li>
 
-	<script th:inline="javascript">
-		const boardCode = /*[[${boardCode}]]*/"게시판 코드 번호";
-	</script>
-</body>
+          <li>
+            <a
+              th:href="@{/board/{boardCode}(boardCode=${boardCode}, cp=${pagination.prevPage})}"
+              class="page-btn"
+              >&lt;</a
+            >
+          </li>
+
+          <th:block
+            th:each="i : ${#numbers.sequence(pagination.startPage, pagination.endPage)}"
+          >
+            <li>
+              <a
+                th:href="@{/board/{boardCode}(boardCode=${boardCode}, cp=${i})}"
+                th:text="${i}"
+                class="page-btn"
+                th:classappend="${i == pagination.currentPage} ? ' curr-page' : ''"
+              ></a>
+            </li>
+          </th:block>
+
+          <li>
+            <a
+              th:href="@{/board/{boardCode}(boardCode=${boardCode}, cp=${pagination.nextPage})}"
+              class="page-btn"
+              >&gt;</a
+            >
+          </li>
+
+          <li>
+            <a
+              th:href="@{/board/{boardCode}(boardCode=${boardCode}, cp=${pagination.maxPage})}"
+              class="page-btn"
+              >&gt;&gt;</a
+            >
+          </li>
+        </ul>
+      </div>
+      <!-- 페이지 네이션 -> 검색인 경우 -->
+      <div id="page" th:if="${param.key}" th:object="${pagination}">
+        <ul>
+          <li>
+            <a
+              th:href="@{/board/{boardCode}(boardCode=${boardCode}, cp=1, key=${param.key}, query=${param.query})}"
+              class="page-btn"
+              >&lt;&lt;</a
+            >
+          </li>
+
+          <li>
+            <a
+              th:href="@{/board/{boardCode}(boardCode=${boardCode}, cp=*{prevPage}, key=${param.key}, query=${param.query})}"
+              class="page-btn"
+              >&lt;</a
+            >
+          </li>
+
+          <th:block
+            th:each="i : ${#numbers.sequence(pagination.startPage, pagination.endPage)}"
+          >
+            <li>
+              <a
+                th:href="@{/board/{boardCode}(boardCode=${boardCode}, cp=${i}, key=${param.key}, query=${param.query})}"
+                th:text="${i}"
+                class="page-btn"
+                th:classappend="${i == pagination.currentPage} ? ' curr-page' : ''"
+              ></a>
+            </li>
+          </th:block>
+
+          <li>
+            <a
+              th:href="@{/board/{boardCode}(boardCode=${boardCode}, cp=*{nextPage}, key=${param.key}, query=${param.query})}"
+              class="page-btn"
+              >&gt;</a
+            >
+          </li>
+
+          <li>
+            <a
+              th:href="@{/board/{boardCode}(boardCode=${boardCode}, cp=*{maxPage}, key=${param.key}, query=${param.query})}"
+              class="page-btn"
+              >&gt;&gt;</a
+            >
+          </li>
+        </ul>
+      </div>
+    </div>
+    <!-- footer 들어갈 자리 -->
+    <th:block th:replace="~{common/footer}"></th:block>
+    <!-- th:replace="~{common/footer}" -->
+
+    <script th:inline="javascript">
+      const boardCode = /*[[${boardCode}]]*/ "게시판 코드 번호";
+    </script>
+  </body>
 </html>
