[Add] 글작성 (썸머노트) 퍼블리싱

--- a/semiProject/src/main/resources/static/css/board/volunteerReviewList.css
+++ b/semiProject/src/main/resources/static/css/board/volunteerReviewList.css
@@ -9,7 +9,7 @@
   justify-content: flex-end;
   margin: 20px 0px;
 }
-#write-btn {
+.write-btn {
   border: none;
   width: 165px;
   height: 63px;
@@ -19,7 +19,7 @@
   background-color: #ff5900;
   color: white;
 }
-#write-btn:hover {
+.write-btn:hover {
   background-color: #ffd879;
   color: #ff5900;
 }
